<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>de.regatta-hd</groupId>
  <artifactId>regatta-hd</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Heidelberger Regatta Software</name>

  <organization>
    <name>Heidelberger Regattaverband e. V.</name>
    <url>http://www.regatta-hd.de/</url>
  </organization>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <java.version>15</java.version>

    <!-- https://search.maven.org/artifact/org.openjfx/javafx-base -->
    <javafx.version>15.0.1</javafx.version>

    <!-- https://search.maven.org/artifact/org.projectlombok/lombok -->
    <lombok.version>1.18.18</lombok.version>

    <!-- https://search.maven.org/artifact/org.hibernate/hibernate-core -->
    <hibernate.version>5.4.27.Final</hibernate.version>

    <!-- https://search.maven.org/artifact/com.microsoft.sqlserver/mssql-jdbc -->
    <mssql.version>9.2.0.jre15</mssql.version>

    <!-- https://search.maven.org/artifact/org.apache.commons/commons-lang3 -->
    <commons-lang3.version>3.11</commons-lang3.version>

    <!-- https://search.maven.org/artifact/org.junit.jupiter/junit-jupiter-api -->
    <junit.version>5.7.1</junit.version>
  </properties>

  <modules>
    <module>3rd-party</module>
    <module>aquarius-db</module>
    <module>ui</module>
  </modules>

  <prerequisites>
    <maven>3.6.3</maven>
  </prerequisites>

  <dependencyManagement>
    <dependencies>
      <!-- ============== -->
      <!-- Database & JPA -->
      <!-- ============== -->
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-core</artifactId>
        <version>${hibernate.version}</version>
      </dependency>
      <dependency>
        <groupId>com.microsoft.sqlserver</groupId>
        <artifactId>mssql-jdbc</artifactId>
        <version>${mssql.version}</version>
      </dependency>

      <!-- =========== -->
      <!-- Open JavaFX -->
      <!-- =========== -->
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-base</artifactId>
        <version>${javafx.version}</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-controls</artifactId>
        <version>${javafx.version}</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-fxml</artifactId>
        <version>${javafx.version}</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-graphics</artifactId>
        <version>${javafx.version}</version>
      </dependency>

      <!-- =========== -->
      <!-- Other Tools -->
      <!-- =========== -->
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons-lang3.version}</version>
      </dependency>

      <!-- ========== -->
      <!-- Test tools -->
      <!-- ========== -->
      <!-- https://search.maven.org/artifact/org.hamcrest/hamcrest -->
      <dependency>
        <groupId>org.hamcrest</groupId>
        <artifactId>hamcrest</artifactId>
        <version>2.2</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <!-- ============ -->
    <!-- Google Guice -->
    <!-- ============ -->
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>guice</artifactId>
      <version>${project.version}</version>
      <classifier>module</classifier>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>

    <!-- ========== -->
    <!-- Test tools -->
    <!-- ========== -->
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <!-- https://search.maven.org/artifact/org.apache.maven.plugins/maven-shade-plugin -->
        <plugin>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.2.4</version>
        </plugin>
        <!-- https://search.maven.org/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
        </plugin>
        <!-- https://search.maven.org/artifact/org.apache.maven.plugins/maven-clean-plugin -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- https://search.maven.org/artifact/org.apache.maven.plugins/maven-resources-plugin -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.2.0</version>
        </plugin>
        <!-- https://search.maven.org/artifact/org.apache.maven.plugins/maven-deploy-plugin -->
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- https://search.maven.org/artifact/org.apache.maven.plugins/maven-install-plugin -->
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <!-- https://search.maven.org/artifact/org.apache.maven.plugins/maven-site-plugin -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.9.1</version>
        </plugin>
        <!-- https://search.maven.org/artifact/org.apache.maven.plugins/maven-jar-plugin -->
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.2.0</version>
        </plugin>
        <!-- https://search.maven.org/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.0.0-M5</version>
        </plugin>

        <!-- https://search.maven.org/artifact/org.openjfx/javafx-maven-plugin -->
        <plugin>
          <groupId>org.openjfx</groupId>
          <artifactId>javafx-maven-plugin</artifactId>
          <version>0.0.5</version>
        </plugin>

        <!-- https://search.maven.org/artifact/org.codehaus.mojo/exec-maven-plugin -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>${java.version}</release>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--add-opens java.base/java.lang=com.google.guice</argLine>
          <includes>
            <include>**/*Tests</include>
          </includes>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
